more animations, updated message, clear repair type on phone change, booking date spacing

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,5 +1,5 @@
 // Fonts
-$title-font: "Bebas Neue", cursive;
+$title-font: "Bebas Neue", sans-serif;
 $caption-font: "Josefin Sans", sans-serif;
 
 // Spacing
